@@ -4,7 +4,6 @@ import com.google.common.base.Strings;
 import com.google.common.io.ByteStreams;
 import jakarta.ws.rs.BadRequestException;
 import jakarta.ws.rs.ClientErrorException;
-import jakarta.ws.rs.HttpMethod;
 import jakarta.ws.rs.InternalServerErrorException;
 import jakarta.ws.rs.NotAllowedException;
 import jakarta.ws.rs.NotAuthorizedException;
@@ -32,6 +31,8 @@ import net.ripe.db.whois.common.TestDateTimeProvider;
 import net.ripe.db.whois.common.dao.EmailStatusDao;
 import net.ripe.db.whois.common.domain.User;
 import net.ripe.db.whois.common.domain.io.Downloader;
+import net.ripe.db.whois.common.domain.io.JavaNetDownloader;
+import net.ripe.db.whois.common.domain.io.JaxRSDownloader;
 import net.ripe.db.whois.common.mail.EmailStatusType;
 import net.ripe.db.whois.common.rpsl.AttributeType;
 import net.ripe.db.whois.common.rpsl.ObjectType;
@@ -77,7 +78,6 @@ import java.util.zip.GZIPInputStream;
 import static net.ripe.db.whois.common.rpsl.RpslObjectFilter.buildGenericObject;
 import static net.ripe.db.whois.common.support.StringMatchesRegexp.stringMatchesRegexp;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.arrayContainingInAnyOrder;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
@@ -279,9 +279,19 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
     }
 
     @Test
-    public void lookup_downloader_test() throws Exception {
+    public void lookup_java_net_downloader_test() throws Exception {
         Path path = Files.createTempFile("downloader_test", "");
-        Downloader downloader = new Downloader();
+        Downloader downloader = new JavaNetDownloader();
+        downloader.downloadTo(LoggerFactory.getLogger("downloader_test"), new URL(String.format("http://localhost:%d/whois/test/mntner/owner-mnt", getPort())), path);
+        final String result = new String(Files.readAllBytes(path));
+        assertThat(result, containsString("OWNER-MNT"));
+        assertThat(result, endsWith("</whois-resources>\n"));
+    }
+
+    @Test
+    public void lookup_jaxrs_downloader_test() throws Exception {
+        Path path = Files.createTempFile("downloader_test", "");
+        Downloader downloader = new JaxRSDownloader();
         downloader.downloadTo(LoggerFactory.getLogger("downloader_test"), new URL(String.format("http://localhost:%d/whois/test/mntner/owner-mnt", getPort())), path);
         final String result = new String(Files.readAllBytes(path));
         assertThat(result, containsString("OWNER-MNT"));
@@ -567,6 +577,26 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
     }
 
     @Test
+    public void lookup_route_encoded_forward_slash_in_primary_key() {
+        databaseHelper.addObject(
+                "route:           193.254.30.0/24\n" +
+                "descr:           Test route\n" +
+                "origin:          AS12726\n" +
+                "mnt-by:          OWNER-MNT\n" +
+                "mnt-routes:      OWNER-MNT {192.168.0.0/16}\n" +
+                "source:          TEST\n");
+        ipTreeUpdater.rebuild();
+
+        final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/route/193.254.30.0%2F24AS12726").request().get(WhoisResources.class);
+
+        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getWhoisObjects(), hasSize(1));
+
+        final WhoisObject whoisObject = whoisResources.getWhoisObjects().get(0);
+        assertThat(whoisObject.getLink().getHref(), is("http://rest-test.db.ripe.net/test/route/193.254.30.0/24AS12726"));
+    }
+
+    @Test
     public void lookup_route6() {
         databaseHelper.addObject(
                 "route6:          2001::/32\n" +
@@ -807,6 +837,30 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
         assertThat(whoisResources.getTermsAndConditions().getHref(), is(WhoisResources.TERMS_AND_CONDITIONS));
     }
 
+    @Test
+    public void create_person_json_ipv4_address() {
+        final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/person?password=test", true)
+                .request()
+                .post(Entity.entity(map(PAULETH_PALTHEN), MediaType.APPLICATION_XML), WhoisResources.class);
+
+        assertThat(whoisResources.getLink().getHref(), is(String.format("http://0.0.0.0:%s/test/person", getPort())));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+    }
+
+    @Test
+    public void create_person_json_ipv6_address() {
+        final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/person?password=test", false)
+                .request()
+                .post(Entity.entity(map(PAULETH_PALTHEN), MediaType.APPLICATION_XML), WhoisResources.class);
+
+        assertThat(whoisResources.getLink().getHref(), is(String.format("http://[::1]:%s/test/person", getPort())));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+    }
+
 
     @Test
     public void lookup_person_head() {
@@ -835,12 +889,23 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .get(String.class);
 
         assertThat(whoisResources, not(containsString("errormessages")));
-        assertThat(whoisResources, containsString("{\"objects\":{\"object\":[ {\n  \"type\" : \"person\","));
-        assertThat(whoisResources, containsString("" +
-                "\"terms-and-conditions\" : {\n" +
-                "\"type\" : \"locator\",\n" +
-                "\"href\" : \"https://docs.db.ripe.net/terms-conditions.html\"\n" +
-                "}"));
+        assertThat(whoisResources, containsString(
+                "{\n" +
+                "  \"objects\" : {\n" +
+                "    \"object\" : [ {\n" +
+                "      \"type\" : \"person\",\n" +
+                "      \"link\" : {\n" +
+                "        \"type\" : \"locator\",\n" +
+                "        \"href\" : \"http://rest-test.db.ripe.net/test/person/TP1-TEST\"\n" +
+                "      },\n" +
+                "      \"source\" : {\n" +
+                "        \"id\" : \"test\"\n" +
+                "      },"));
+        assertThat(whoisResources, containsString(
+                "  \"terms-and-conditions\" : {\n" +
+                "    \"type\" : \"locator\",\n" +
+                "    \"href\" : \"https://docs.db.ripe.net/terms-conditions.html\"\n" +
+                "  },\n"));
     }
 
     @Test
@@ -1312,79 +1377,80 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(String.class);
 
-        assertThat(response, is("" +
-                        "{\"objects\":{\"object\":[ {\n" +
-                        "  \"type\" : \"mntner\",\n" +
-                        "  \"link\" : {\n" +
+        assertThat(response, is(
+                        "{\n" +
+                        "  \"objects\" : {\n" +
+                        "    \"object\" : [ {\n" +
+                        "      \"type\" : \"mntner\",\n" +
+                        "      \"link\" : {\n" +
+                        "        \"type\" : \"locator\",\n" +
+                        "        \"href\" : \"http://rest-test.db.ripe.net/test/mntner/TRICKY-MNT\"\n" +
+                        "      },\n" +
+                        "      \"source\" : {\n" +
+                        "        \"id\" : \"test\"\n" +
+                        "      },\n" +
+                        "      \"primary-key\" : {\n" +
+                        "        \"attribute\" : [ {\n" +
+                        "          \"name\" : \"mntner\",\n" +
+                        "          \"value\" : \"TRICKY-MNT\"\n" +
+                        "        } ]\n" +
+                        "      },\n" +
+                        "      \"attributes\" : {\n" +
+                        "        \"attribute\" : [ {\n" +
+                        "          \"name\" : \"mntner\",\n" +
+                        "          \"value\" : \"TRICKY-MNT\"\n" +
+                        "        }, {\n" +
+                        "          \"name\" : \"descr\",\n" +
+                        "          \"value\" : \"Owner Maintainer\"\n" +
+                        "        }, {\n" +
+                        "          \"link\" : {\n" +
+                        "            \"type\" : \"locator\",\n" +
+                        "            \"href\" : \"http://rest-test.db.ripe.net/test/person/TP1-TEST\"\n" +
+                        "          },\n" +
+                        "          \"name\" : \"admin-c\",\n" +
+                        "          \"value\" : \"TP1-TEST\",\n" +
+                        "          \"referenced-type\" : \"person\"\n" +
+                        "        }, {\n" +
+                        "          \"name\" : \"auth\",\n" +
+                        "          \"value\" : \"MD5-PW\",\n" +
+                        "          \"comment\" : \"Filtered\"\n" +
+                        "        }, {\n" +
+                        "          \"name\" : \"auth\",\n" +
+                        "          \"value\" : \"SSO\",\n" +
+                        "          \"comment\" : \"Filtered\"\n" +
+                        "        }, {\n" +
+                        "          \"name\" : \"remarks\",\n" +
+                        "          \"value\" : \"\"\n" +
+                        "        }, {\n" +
+                        "          \"name\" : \"remarks\",\n" +
+                        "          \"value\" : \"remark with\",\n" +
+                        "          \"comment\" : \"comment\"\n" +
+                        "        }, {\n" +
+                        "          \"link\" : {\n" +
+                        "            \"type\" : \"locator\",\n" +
+                        "            \"href\" : \"http://rest-test.db.ripe.net/test/mntner/OWNER-MNT\"\n" +
+                        "          },\n" +
+                        "          \"name\" : \"mnt-by\",\n" +
+                        "          \"value\" : \"OWNER-MNT\",\n" +
+                        "          \"referenced-type\" : \"mntner\"\n" +
+                        "        }, {\n" +
+                        "          \"name\" : \"source\",\n" +
+                        "          \"value\" : \"TEST\",\n" +
+                        "          \"comment\" : \"Filtered\"\n" +
+                        "        } ]\n" +
+                        "      }\n" +
+                        "    } ]\n" +
+                        "  },\n" +
+                        "  \"terms-and-conditions\" : {\n" +
                         "    \"type\" : \"locator\",\n" +
-                        "    \"href\" : \"http://rest-test.db.ripe.net/test/mntner/TRICKY-MNT\"\n" +
+                        "    \"href\" : \"https://docs.db.ripe.net/terms-conditions.html\"\n" +
                         "  },\n" +
-                        "  \"source\" : {\n" +
-                        "    \"id\" : \"test\"\n" +
-                        "  },\n" +
-                        "  \"primary-key\" : {\n" +
-                        "    \"attribute\" : [ {\n" +
-                        "      \"name\" : \"mntner\",\n" +
-                        "      \"value\" : \"TRICKY-MNT\"\n" +
-                        "    } ]\n" +
-                        "  },\n" +
-                        "  \"attributes\" : {\n" +
-                        "    \"attribute\" : [ {\n" +
-                        "      \"name\" : \"mntner\",\n" +
-                        "      \"value\" : \"TRICKY-MNT\"\n" +
-                        "    }, {\n" +
-                        "      \"name\" : \"descr\",\n" +
-                        "      \"value\" : \"Owner Maintainer\"\n" +
-                        "    }, {\n" +
-                        "      \"link\" : {\n" +
-                        "        \"type\" : \"locator\",\n" +
-                        "        \"href\" : \"http://rest-test.db.ripe.net/test/person/TP1-TEST\"\n" +
-                        "      },\n" +
-                        "      \"name\" : \"admin-c\",\n" +
-                        "      \"value\" : \"TP1-TEST\",\n" +
-                        "      \"referenced-type\" : \"person\"\n" +
-                        "    }, {\n" +
-                        "      \"name\" : \"auth\",\n" +
-                        "      \"value\" : \"MD5-PW\",\n" +
-                        "      \"comment\" : \"Filtered\"\n" +
-                        "    }, {\n" +
-                        "      \"name\" : \"auth\",\n" +
-                        "      \"value\" : \"SSO\",\n" +
-                        "      \"comment\" : \"Filtered\"\n" +
-                        "    }, {\n" +
-                        "      \"name\" : \"remarks\",\n" +
-                        "      \"value\" : \"\"\n" +
-                        "    }, {\n" +
-                        "      \"name\" : \"remarks\",\n" +
-                        "      \"value\" : \"remark with\",\n" +
-                        "      \"comment\" : \"comment\"\n" +
-                        "    }, {\n" +
-                        "      \"link\" : {\n" +
-                        "        \"type\" : \"locator\",\n" +
-                        "        \"href\" : \"http://rest-test.db.ripe.net/test/mntner/OWNER-MNT\"\n" +
-                        "      },\n" +
-                        "      \"name\" : \"mnt-by\",\n" +
-                        "      \"value\" : \"OWNER-MNT\",\n" +
-                        "      \"referenced-type\" : \"mntner\"\n" +
-                        "    }, {\n" +
-                        "      \"name\" : \"source\",\n" +
-                        "      \"value\" : \"TEST\",\n" +
-                        "      \"comment\" : \"Filtered\"\n" +
-                        "    } ]\n" +
+                        "  \"version\" : {\n" +
+                        "    \"version\" : \"" + applicationVersion.getVersion() + "\",\n" +
+                        "    \"timestamp\" : \"" + applicationVersion.getTimestamp() + "\",\n" +
+                        "    \"commit-id\" : \"" + applicationVersion.getCommitId() + "\"\n" +
                         "  }\n" +
-                        "} ]\n" +
-                        "},\n" +
-                        "\"terms-and-conditions\" : {\n" +
-                        "\"type\" : \"locator\",\n" +
-                        "\"href\" : \"https://docs.db.ripe.net/terms-conditions.html\"\n" +
-                        "},\n" +
-                        "\"version\" : {\n" +
-                        "\"version\" : \"" + applicationVersion.getVersion() + "\",\n" +
-                        "\"timestamp\" : \"" + applicationVersion.getTimestamp() + "\",\n" +
-                        "\"commit-id\" : \"" + applicationVersion.getCommitId() + "\"\n" +
-                        "}\n" +
-                        "}"
-        ));
+                        "}"));
     }
 
     @Test
@@ -1392,61 +1458,64 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
         final String result = RestTest.target(getPort(), "whois/test/person/TP1-TEST")
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(String.class);
+
         assertThat(result, is(
-                "{\"objects\":{\"object\":[ {\n" +
-                "  \"type\" : \"person\",\n" +
-                "  \"link\" : {\n" +
-                "    \"type\" : \"locator\",\n" +
-                "    \"href\" : \"http://rest-test.db.ripe.net/test/person/TP1-TEST\"\n" +
-                "  },\n" +
-                "  \"source\" : {\n" +
-                "    \"id\" : \"test\"\n" +
-                "  },\n" +
-                "  \"primary-key\" : {\n" +
-                "    \"attribute\" : [ {\n" +
-                "      \"name\" : \"nic-hdl\",\n" +
-                "      \"value\" : \"TP1-TEST\"\n" +
-                "    } ]\n" +
-                "  },\n" +
-                "  \"attributes\" : {\n" +
-                "    \"attribute\" : [ {\n" +
-                "      \"name\" : \"person\",\n" +
-                "      \"value\" : \"Test Person\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"address\",\n" +
-                "      \"value\" : \"Singel 258\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"phone\",\n" +
-                "      \"value\" : \"+31 6 12345678\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"nic-hdl\",\n" +
-                "      \"value\" : \"TP1-TEST\"\n" +
-                "    }, {\n" +
+                "{\n" +
+                "  \"objects\" : {\n" +
+                "    \"object\" : [ {\n" +
+                "      \"type\" : \"person\",\n" +
                 "      \"link\" : {\n" +
                 "        \"type\" : \"locator\",\n" +
-                "        \"href\" : \"http://rest-test.db.ripe.net/test/mntner/OWNER-MNT\"\n" +
+                "        \"href\" : \"http://rest-test.db.ripe.net/test/person/TP1-TEST\"\n" +
                 "      },\n" +
-                "      \"name\" : \"mnt-by\",\n" +
-                "      \"value\" : \"OWNER-MNT\",\n" +
-                "      \"referenced-type\" : \"mntner\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"source\",\n" +
-                "      \"value\" : \"TEST\"\n" +
+                "      \"source\" : {\n" +
+                "        \"id\" : \"test\"\n" +
+                "      },\n" +
+                "      \"primary-key\" : {\n" +
+                "        \"attribute\" : [ {\n" +
+                "          \"name\" : \"nic-hdl\",\n" +
+                "          \"value\" : \"TP1-TEST\"\n" +
+                "        } ]\n" +
+                "      },\n" +
+                "      \"attributes\" : {\n" +
+                "        \"attribute\" : [ {\n" +
+                "          \"name\" : \"person\",\n" +
+                "          \"value\" : \"Test Person\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"address\",\n" +
+                "          \"value\" : \"Singel 258\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"phone\",\n" +
+                "          \"value\" : \"+31 6 12345678\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"nic-hdl\",\n" +
+                "          \"value\" : \"TP1-TEST\"\n" +
+                "        }, {\n" +
+                "          \"link\" : {\n" +
+                "            \"type\" : \"locator\",\n" +
+                "            \"href\" : \"http://rest-test.db.ripe.net/test/mntner/OWNER-MNT\"\n" +
+                "          },\n" +
+                "          \"name\" : \"mnt-by\",\n" +
+                "          \"value\" : \"OWNER-MNT\",\n" +
+                "          \"referenced-type\" : \"mntner\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"source\",\n" +
+                "          \"value\" : \"TEST\"\n" +
+                "        } ]\n" +
+                "      }\n" +
                 "    } ]\n" +
+                "  },\n" +
+                "  \"terms-and-conditions\" : {\n" +
+                "    \"type\" : \"locator\",\n" +
+                "    \"href\" : \"https://docs.db.ripe.net/terms-conditions.html\"\n" +
+                "  },\n" +
+                "  \"version\" : {\n" +
+                "    \"version\" : \"" + applicationVersion.getVersion() + "\",\n" +
+                "    \"timestamp\" : \"" + applicationVersion.getTimestamp() + "\",\n" +
+                "    \"commit-id\" : \"" + applicationVersion.getCommitId()  + "\"\n" +
                 "  }\n" +
-                "} ]\n" +
-                "},\n" +
-                "\"terms-and-conditions\" : {\n" +
-                "\"type\" : \"locator\",\n" +
-                "\"href\" : \"https://docs.db.ripe.net/terms-conditions.html\"\n" +
-                "},\n" +
-                "\"version\" : {\n" +
-                "\"version\" : \"" + applicationVersion.getVersion() + "\",\n" +
-                "\"timestamp\" : \"" + applicationVersion.getTimestamp() + "\",\n" +
-                "\"commit-id\" : \"" + applicationVersion.getCommitId() + "\"\n" +
-                "}\n" +
-                "}"
-        ));
+                "}"));
+
     }
 
     @Test
@@ -1463,84 +1532,85 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
         final String result = RestTest.target(getPort(), "whois/test-grs/aut-num/AS102.json").request().get(String.class);
 
         assertThat(result, is(
-                "{\"objects\":{\"object\":[ {\n" +
-                "  \"type\" : \"aut-num\",\n" +
-                "  \"link\" : {\n" +
-                "    \"type\" : \"locator\",\n" +
-                "    \"href\" : \"http://rest-test.db.ripe.net/test-grs/aut-num/AS102\"\n" +
-                "  },\n" +
-                "  \"source\" : {\n" +
-                "    \"id\" : \"test-grs\"\n" +
-                "  },\n" +
-                "  \"primary-key\" : {\n" +
-                "    \"attribute\" : [ {\n" +
-                "      \"name\" : \"aut-num\",\n" +
-                "      \"value\" : \"AS102\"\n" +
-                "    } ]\n" +
-                "  },\n" +
-                "  \"attributes\" : {\n" +
-                "    \"attribute\" : [ {\n" +
-                "      \"name\" : \"aut-num\",\n" +
-                "      \"value\" : \"AS102\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"as-name\",\n" +
-                "      \"value\" : \"End-User-2\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"descr\",\n" +
-                "      \"value\" : \"description\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"admin-c\",\n" +
-                "      \"value\" : \"DUMY-RIPE\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"tech-c\",\n" +
-                "      \"value\" : \"DUMY-RIPE\"\n" +
-                "    }, {\n" +
+                "{\n" +
+                "  \"objects\" : {\n" +
+                "    \"object\" : [ {\n" +
+                "      \"type\" : \"aut-num\",\n" +
                 "      \"link\" : {\n" +
                 "        \"type\" : \"locator\",\n" +
-                "        \"href\" : \"http://rest-test.db.ripe.net/test-grs/mntner/OWNER-MNT\"\n" +
+                "        \"href\" : \"http://rest-test.db.ripe.net/test-grs/aut-num/AS102\"\n" +
                 "      },\n" +
-                "      \"name\" : \"mnt-by\",\n" +
-                "      \"value\" : \"OWNER-MNT\",\n" +
-                "      \"referenced-type\" : \"mntner\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"source\",\n" +
-                "      \"value\" : \"TEST-GRS\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"remarks\",\n" +
-                "      \"value\" : \"****************************\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"remarks\",\n" +
-                "      \"value\" : \"* THIS OBJECT IS MODIFIED\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"remarks\",\n" +
-                "      \"value\" : \"* Please note that all data that is generally regarded as personal\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"remarks\",\n" +
-                "      \"value\" : \"* data has been removed from this object.\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"remarks\",\n" +
-                "      \"value\" : \"* To view the original object, please query the RIPE Database at:\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"remarks\",\n" +
-                "      \"value\" : \"* http://www.ripe.net/whois\"\n" +
-                "    }, {\n" +
-                "      \"name\" : \"remarks\",\n" +
-                "      \"value\" : \"****************************\"\n" +
+                "      \"source\" : {\n" +
+                "        \"id\" : \"test-grs\"\n" +
+                "      },\n" +
+                "      \"primary-key\" : {\n" +
+                "        \"attribute\" : [ {\n" +
+                "          \"name\" : \"aut-num\",\n" +
+                "          \"value\" : \"AS102\"\n" +
+                "        } ]\n" +
+                "      },\n" +
+                "      \"attributes\" : {\n" +
+                "        \"attribute\" : [ {\n" +
+                "          \"name\" : \"aut-num\",\n" +
+                "          \"value\" : \"AS102\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"as-name\",\n" +
+                "          \"value\" : \"End-User-2\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"descr\",\n" +
+                "          \"value\" : \"description\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"admin-c\",\n" +
+                "          \"value\" : \"DUMY-RIPE\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"tech-c\",\n" +
+                "          \"value\" : \"DUMY-RIPE\"\n" +
+                "        }, {\n" +
+                "          \"link\" : {\n" +
+                "            \"type\" : \"locator\",\n" +
+                "            \"href\" : \"http://rest-test.db.ripe.net/test-grs/mntner/OWNER-MNT\"\n" +
+                "          },\n" +
+                "          \"name\" : \"mnt-by\",\n" +
+                "          \"value\" : \"OWNER-MNT\",\n" +
+                "          \"referenced-type\" : \"mntner\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"source\",\n" +
+                "          \"value\" : \"TEST-GRS\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"remarks\",\n" +
+                "          \"value\" : \"****************************\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"remarks\",\n" +
+                "          \"value\" : \"* THIS OBJECT IS MODIFIED\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"remarks\",\n" +
+                "          \"value\" : \"* Please note that all data that is generally regarded as personal\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"remarks\",\n" +
+                "          \"value\" : \"* data has been removed from this object.\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"remarks\",\n" +
+                "          \"value\" : \"* To view the original object, please query the RIPE Database at:\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"remarks\",\n" +
+                "          \"value\" : \"* http://www.ripe.net/whois\"\n" +
+                "        }, {\n" +
+                "          \"name\" : \"remarks\",\n" +
+                "          \"value\" : \"****************************\"\n" +
+                "        } ]\n" +
+                "      }\n" +
                 "    } ]\n" +
+                "  },\n" +
+                "  \"terms-and-conditions\" : {\n" +
+                "    \"type\" : \"locator\",\n" +
+                "    \"href\" : \"https://docs.db.ripe.net/terms-conditions.html\"\n" +
+                "  },\n" +
+                "  \"version\" : {\n" +
+                "    \"version\" : \"" + applicationVersion.getVersion() + "\",\n" +
+                "    \"timestamp\" : \"" + applicationVersion.getTimestamp() + "\",\n" +
+                "    \"commit-id\" : \"" + applicationVersion.getCommitId() + "\"\n" +
                 "  }\n" +
-                "} ]\n" +
-                "},\n" +
-                "\"terms-and-conditions\" : {\n" +
-                "\"type\" : \"locator\",\n" +
-                "\"href\" : \"https://docs.db.ripe.net/terms-conditions.html\"\n" +
-                "},\n" +
-                "\"version\" : {\n" +
-                "\"version\" : \"" + applicationVersion.getVersion() + "\",\n" +
-                "\"timestamp\" : \"" + applicationVersion.getTimestamp() + "\",\n" +
-                "\"commit-id\" : \"" + applicationVersion.getCommitId() + "\"\n" +
-                "}\n" +
-                "}"
-        ));
+                "}"));
     }
 
     @Test
@@ -1621,7 +1691,10 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request()
                 .post(Entity.entity(map(PAULETH_PALTHEN), MediaType.APPLICATION_XML), String.class);
 
-        assertThat(response, not(containsString("errormessages")));
+        assertThat(response, containsString(""+
+                "    <errormessages>\n" +
+                "        <errormessage severity=\"Warning\" text=\"MD5 hashed password authentication is deprecated and support will be removed at the end of 2025. Please switch to an alternative authentication method before then.\"/>\n" +
+                "    </errormessages>"));
     }
 
 
@@ -1966,8 +2039,11 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .post(Entity.entity(map(PAULETH_PALTHEN), MediaType.APPLICATION_XML), WhoisResources.class);
 
         assertThat(whoisResources.getLink().getHref(), is(String.format("http://localhost:%s/test/person", getPort())));
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
-        final WhoisObject object = whoisResources.getWhoisObjects().get(0);
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+
+        final WhoisObject object = whoisResources.getWhoisObjects().getFirst();
 
         assertThat(object.getAttributes(), containsInAnyOrder(
                 new Attribute("person", "Pauleth Palthen"),
@@ -2006,8 +2082,10 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
         final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/as-set?password=test")
                 .request()
                 .post(Entity.entity(map(TEST_AS_SET), MediaType.APPLICATION_XML), WhoisResources.class);
-        assertThat(whoisResources.getErrorMessages(), hasSize(0));
-        final WhoisObject object = whoisResources.getWhoisObjects().get(0);
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+        final WhoisObject object = whoisResources.getWhoisObjects().getFirst();
 
         assertThat(object.getSource().getId(), is("test-nonauth"));
     }
@@ -2033,9 +2111,11 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
         final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/as-set?password=test")
                 .request()
                 .post(Entity.entity(map(TEST_AS_SET), MediaType.APPLICATION_XML), WhoisResources.class);
-        assertThat(whoisResources.getErrorMessages(), hasSize(1));
-        assertThat(whoisResources.getErrorMessages().get(0).toString(), is("The \"source:\" attribute value has been updated from \"TEST\" to \"TEST-NONAUTH\" to match the referenced AUT-NUM \"AS3333\""));
-        final WhoisObject object = whoisResources.getWhoisObjects().get(0);
+        assertThat(whoisResources.getErrorMessages(), hasSize(2));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+        assertThat(whoisResources.getErrorMessages().get(1).toString(), is("The \"source:\" attribute value has been updated from \"TEST\" to \"TEST-NONAUTH\" to match the referenced AUT-NUM \"AS3333\""));
+        final WhoisObject object = whoisResources.getWhoisObjects().getFirst();
 
         assertThat(object.getSource().getId(), is("test-nonauth"));
     }
@@ -2090,9 +2170,12 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
         final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/as-set?password=test")
                 .request()
                 .post(Entity.entity(map(TEST_AS_SET), MediaType.APPLICATION_XML), WhoisResources.class);
-        assertThat(whoisResources.getErrorMessages(), hasSize(1));
-        assertThat(whoisResources.getErrorMessages().get(0).toString(), is("The \"source:\" attribute value has been updated from \"TEST\" to \"TEST-NONAUTH\" to match the referenced AUT-NUM \"AS3333\""));
-        final WhoisObject object = whoisResources.getWhoisObjects().get(0);
+        assertThat(whoisResources.getErrorMessages(), hasSize(2));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+
+        assertThat(whoisResources.getErrorMessages().get(1).toString(), is("The \"source:\" attribute value has been updated from \"TEST\" to \"TEST-NONAUTH\" to match the referenced AUT-NUM \"AS3333\""));
+        final WhoisObject object = whoisResources.getWhoisObjects().getFirst();
 
         assertThat(object.getSource().getId(), is("test-nonauth"));
     }
@@ -2121,9 +2204,11 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                     .request()
                     .post(Entity.entity(map(TEST_AS_SET), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), hasSize(1));
-        assertThat(whoisResources.getErrorMessages().get(0).toString(), is("The \"source:\" attribute value has been updated from \"TEST-NONAUTH\" to \"TEST\" to match the referenced AUT-NUM \"AS3333\""));
-        final WhoisObject object = whoisResources.getWhoisObjects().get(0);
+        assertThat(whoisResources.getErrorMessages(), hasSize(2));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+        assertThat(whoisResources.getErrorMessages().get(1).toString(), is("The \"source:\" attribute value has been updated from \"TEST-NONAUTH\" to \"TEST\" to match the referenced AUT-NUM \"AS3333\""));
+        final WhoisObject object = whoisResources.getWhoisObjects().getFirst();
 
         assertThat(object.getSource().getId(), is("test"));
     }
@@ -2362,7 +2447,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .post(Entity.entity(map(PAULETH_PALTHEN), MediaType.APPLICATION_XML), WhoisResources.class);
 
         assertThat(whoisResources.getLink().getHref(), is(String.format("http://localhost:%s/test/person", getPort())));
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(databaseHelper.lookupObject(ObjectType.PERSON, "PP1-TEST"), is(not(nullValue())));
     }
 
@@ -2735,12 +2822,15 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 "    </objects>\n" +
                 "</whois-resources>", MediaType.APPLICATION_XML), WhoisResources.class);
 
-        assertThat(response.getErrorMessages(), hasSize(1));
-        assertThat(response.getErrorMessages().get(0).getText(), is("Invalid character(s) were substituted in attribute \"%s\" value"));
-        assertThat(response.getErrorMessages().get(0).getArgs(), hasSize(1));
-        assertThat(response.getErrorMessages().get(0).getArgs().get(0).getValue(), is("person"));
+        assertThat(response.getErrorMessages(), hasSize(2));
+        assertThat(response.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+
+        assertThat(response.getErrorMessages().get(1).getText(), is("Invalid character(s) were substituted in attribute \"%s\" value"));
+        assertThat(response.getErrorMessages().get(1).getArgs(), hasSize(1));
+        assertThat(response.getErrorMessages().get(1).getArgs().getFirst().getValue(), is("person"));
         assertThat(response.getWhoisObjects(), hasSize(1));
-        assertThat(response.getWhoisObjects().get(0).getAttributes().get(0).getValue(), is("New Person"));
+        assertThat(response.getWhoisObjects().getFirst().getAttributes().getFirst().getValue(), is("New Person"));
     }
 
     @Test
@@ -2774,9 +2864,13 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 "    </objects>\n" +
                 "</whois-resources>", MediaType.APPLICATION_XML), WhoisResources.class);
 
-        RestTest.assertWarningCount(response, 2);
-        RestTest.assertErrorMessage(response, 0, "Warning", "Submitted object identical to database object");
-        RestTest.assertErrorMessage(response, 1, "Warning", "Invalid character(s) were substituted in attribute \"%s\" value", "person");
+        RestTest.assertWarningCount(response, 3);
+
+        RestTest.assertErrorMessage(response, 0, "Warning", "MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then.");
+        RestTest.assertErrorMessage(response, 1, "Warning", "Submitted object identical to database object");
+        RestTest.assertErrorMessage(response, 2, "Warning", "Invalid character(s) were substituted in attribute " +
+                "\"%s\" value", "person");
     }
 
     @Test
@@ -3154,7 +3248,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request()
                 .post(Entity.entity(map(PAULETH_PALTHEN), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
     }
 
@@ -3198,7 +3294,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request(MediaType.APPLICATION_XML_TYPE)
                 .post(Entity.entity(map(rpslObject), MediaType.APPLICATION_JSON), WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         assertThat(whoisResources.getLink().getHref(), is(String.format("http://localhost:%d/test/mntner", getPort())));
     }
@@ -3312,6 +3410,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 "            </attributes>\n" +
                 "        </object>\n" +
                 "    </objects>\n" +
+                "    <errormessages>\n" +
+                "        <errormessage severity=\"Warning\" text=\"MD5 hashed password authentication is deprecated and support will be removed at the end of 2025. Please switch to an alternative authentication method before then.\"/>\n" +
+                "    </errormessages>\n" +
                 "    <terms-and-conditions xlink:type=\"locator\" xlink:href=\"https://docs.db.ripe.net/terms-conditions.html\"/>\n" +
                 "</whois-resources>", getPort())));
     }
@@ -3421,6 +3522,12 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 "      }\n" +
                 "    } ]\n" +
                 "  },\n" +
+                "  \"errormessages\" : {\n" +
+                "    \"errormessage\" : [ {\n" +
+                "      \"severity\" : \"Warning\",\n" +
+                "      \"text\" : \"MD5 hashed password authentication is deprecated and support will be removed at the end of 2025. Please switch to an alternative authentication method before then.\"\n" +
+                "    } ]\n" +
+                "  },\n" +
                 "  \"terms-and-conditions\" : {\n" +
                 "    \"type\" : \"locator\",\n" +
                 "    \"href\" : \"https://docs.db.ripe.net/terms-conditions.html\"\n" +
@@ -3454,8 +3561,10 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request()
                 .post(Entity.entity(map(PASSWORD_ONLY_MNT), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
-        final WhoisObject object = whoisResources.getWhoisObjects().get(0);
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+        final WhoisObject object = whoisResources.getWhoisObjects().getFirst();
         assertThat(object.getType(), is("mntner"));
         assertThat(object.getLink(), is(Link.create("http://rest-test.db.ripe.net/test/mntner/PASSWORD-ONLY-MNT")));
         assertThat(object.getPrimaryKey(), contains(new Attribute("mntner", "PASSWORD-ONLY-MNT")));
@@ -3611,8 +3720,10 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .post(Entity.entity(map(PAULETH_PALTHEN), MediaType.APPLICATION_XML), WhoisResources.class);
 
         final List<ErrorMessage> messages = whoisResources.getErrorMessages();
-        assertThat(messages, hasSize(1));
-        assertThat(messages.get(0).getText(), is("Dry-run performed, no changes to the database have been made"));
+        assertThat(messages, hasSize(2));
+        assertThat(messages.getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+        assertThat(messages.get(1).getText(), is("Dry-run performed, no changes to the database have been made"));
         assertThat(RestTest.target(getPort(), "whois/test/person/PP1-TEST").request().get().getStatus(), is(HttpStatus.NOT_FOUND_404));
     }
 
@@ -3623,8 +3734,10 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .post(Entity.entity(map(PAULETH_PALTHEN), MediaType.APPLICATION_XML), WhoisResources.class);
 
         final List<ErrorMessage> messages = whoisResources.getErrorMessages();
-        assertThat(messages, hasSize(1));
-        assertThat(messages.get(0).getText(), is("Dry-run performed, no changes to the database have been made"));
+        assertThat(messages, hasSize(2));
+        assertThat(messages.getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+        assertThat(messages.get(1).getText(), is("Dry-run performed, no changes to the database have been made"));
         assertThat(RestTest.target(getPort(), "whois/test/person/PP1-TEST").request().get().getStatus(), is(HttpStatus.NOT_FOUND_404));
     }
 
@@ -3635,7 +3748,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .post(Entity.entity(map(PAULETH_PALTHEN), MediaType.APPLICATION_XML), WhoisResources.class);
 
         final List<ErrorMessage> messages = whoisResources.getErrorMessages();
-        assertThat(messages, hasSize(0));
+        assertThat(messages, hasSize(1));
+        assertThat(messages.getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(RestTest.target(getPort(), "whois/test/person/PP1-TEST").request().get().getStatus(), is(HttpStatus.OK_200));
     }
 
@@ -3652,8 +3767,8 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                             .put(Entity.entity(whoisObjectMapper.mapRpslObjects(FormattedClientAttributeMapper.class, update), MediaType.APPLICATION_XML),
                                     WhoisResources.class);
 
-            RestTest.assertWarningCount(response, 1);
-            RestTest.assertErrorMessage(response, 0, "Warning", "Value changed due to conversion into the ISO-8859-1 (Latin-1) character set");
+            RestTest.assertWarningCount(response, 2);
+            RestTest.assertErrorMessage(response, 1, "Warning", "Value changed due to conversion into the ISO-8859-1 (Latin-1) character set");
 
             final RpslObject lookupObject = databaseHelper.lookupObject(ObjectType.PERSON, "TP1-TEST");
             assertThat(lookupObject.findAttribute(AttributeType.ADDRESS).getValue(), is("        ???????? ?????,??????"));
@@ -3712,7 +3827,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
         assertThat(response.getHeaderString("Content-Encoding"), is("gzip"));
 
         final WhoisResources whoisResources = response.readEntity(WhoisResources.class);
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), is(not(empty())));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         final WhoisObject object = whoisResources.getWhoisObjects().get(0);
         assertThat(object.getAttributes(), hasItem(new Attribute("person", "Pauleth Palthen")));
     }
@@ -3889,7 +4006,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request()
                 .post(Entity.entity(mapDirty(rpslObject), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), is(not(empty())));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         assertThat(whoisResources.getLink().getHref(), is(String.format("http://localhost:%s/test/person?unformatted", getPort())));
 
@@ -3950,7 +4069,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request()
                 .delete(WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         try {
             databaseHelper.lookupObject(ObjectType.PERSON, "PP1-TEST");
@@ -3970,7 +4091,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request()
                 .delete(WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         try {
             databaseHelper.lookupObject(ObjectType.PERSON, "PP1-TEST");
@@ -4029,9 +4152,11 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request()
                 .delete(WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
-        assertThat(whoisResources.getWhoisObjects().get(0).getAttributes(), hasItem(new Attribute("auth", "SSO person@net.net")));
+        assertThat(whoisResources.getWhoisObjects().getFirst().getAttributes(), hasItem(new Attribute("auth", "SSO person@net.net")));
 
         try {
             databaseHelper.lookupObject(ObjectType.MNTNER, "SSO-PASSWORD-MNT");
@@ -4052,7 +4177,7 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .delete(WhoisResources.class);
 
         RestTest.assertInfoCount(whoisResources, 1);
-        RestTest.assertErrorMessage(whoisResources, 0, "Info", "RIPE NCC Access token ignored");
+        RestTest.assertErrorMessage(whoisResources, 1, "Info", "RIPE NCC Access token ignored");
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         assertThat(whoisResources.getWhoisObjects().get(0).getAttributes(), hasItem(new Attribute("auth", "SSO person@net.net")));
 
@@ -4270,8 +4395,10 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .delete(WhoisResources.class);
 
         final List<ErrorMessage> messages = whoisResources.getErrorMessages();
-        assertThat(messages, hasSize(1));
-        assertThat(messages.get(0).getText(), is("Dry-run performed, no changes to the database have been made"));
+        assertThat(messages, hasSize(2));
+        assertThat(messages.getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+        assertThat(messages.get(1).getText(), is("Dry-run performed, no changes to the database have been made"));
         assertThat(RestTest.target(getPort(), "whois/test/person/PP1-TEST").request().get().getStatus(), is(HttpStatus.OK_200));
     }
 
@@ -4286,7 +4413,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request(MediaType.APPLICATION_XML)
                 .put(Entity.entity(map(updatedObject), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         final WhoisObject object = whoisResources.getWhoisObjects().get(0);
         assertThat(object.getAttributes(), contains(
@@ -4321,7 +4450,7 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .put(Entity.entity(map(updatedObject), MediaType.APPLICATION_XML), WhoisResources.class);
 
         RestTest.assertInfoCount(whoisResources, 1);
-        RestTest.assertErrorMessage(whoisResources, 0, "Info", "Value %s converted to %s", "test", "TEST");
+        RestTest.assertErrorMessage(whoisResources, 1, "Info", "Value %s converted to %s", "test", "TEST");
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         final WhoisObject object = whoisResources.getWhoisObjects().get(0);
         assertThat(object.getAttributes().get(object.getAttributes().size() - 1).getValue(), is("TEST"));
@@ -4356,7 +4485,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request(MediaType.APPLICATION_XML)
                 .put(Entity.entity(map(updatedObject), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         final WhoisObject object = whoisResources.getWhoisObjects().get(0);
         assertThat(object.getSource().getId(), is("test-nonauth"));
@@ -4384,7 +4515,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request(MediaType.APPLICATION_XML)
                 .put(Entity.entity(map(updatedObject), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         final WhoisObject object = whoisResources.getWhoisObjects().get(0);
         assertThat(object.getSource().getId(), is("test-nonauth"));
@@ -4418,8 +4551,10 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request(MediaType.APPLICATION_XML)
                 .put(Entity.entity(map(updatedObject), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), hasSize(2));
-        assertThat(whoisResources.getErrorMessages().get(0).toString(), is("The \"source:\" attribute value has been updated from \"TEST\" to \"TEST-NONAUTH\" to match the referenced AUT-NUM \"AS3334\""));
+        assertThat(whoisResources.getErrorMessages(), hasSize(3));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+        assertThat(whoisResources.getErrorMessages().get(1).toString(), is("The \"source:\" attribute value has been updated from \"TEST\" to \"TEST-NONAUTH\" to match the referenced AUT-NUM \"AS3334\""));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         final WhoisObject object = whoisResources.getWhoisObjects().get(0);
         assertThat(object.getSource().getId(), is("test-nonauth"));
@@ -4456,10 +4591,12 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                     .request(MediaType.APPLICATION_XML)
                     .put(Entity.entity(map(updatedObject), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), hasSize(2));
-        assertThat(whoisResources.getErrorMessages().get(0).toString(), is("Supplied attribute 'source' has been replaced with a generated value"));
+        assertThat(whoisResources.getErrorMessages(), hasSize(3));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+        assertThat(whoisResources.getErrorMessages().get(1).toString(), is("Supplied attribute 'source' has been replaced with a generated value"));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
-        final WhoisObject object = whoisResources.getWhoisObjects().get(0);
+        final WhoisObject object = whoisResources.getWhoisObjects().getFirst();
         assertThat(object.getSource().getId(), is("test"));
     }
     @Test
@@ -4504,8 +4641,8 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request(MediaType.APPLICATION_XML)
                 .put(Entity.entity(map(PAULETH_PALTHEN), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        RestTest.assertWarningCount(whoisResources, 1);
-        RestTest.assertErrorMessage(whoisResources, 0, "Warning", "Submitted object identical to database object");
+        RestTest.assertWarningCount(whoisResources, 2);
+        RestTest.assertErrorMessage(whoisResources, 1, "Warning", "Submitted object identical to database object");
 
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         final WhoisObject object = whoisResources.getWhoisObjects().get(0);
@@ -4584,7 +4721,8 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                         "</whois-resources>", MediaType.APPLICATION_XML), String.class);
 
         assertThat(response, containsString("<attribute name=\"remarks\" value=\"updated\"/>"));
-        assertThat(response, not(containsString("errormessages")));
+        assertThat(response, containsString("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
     }
 
     @Test
@@ -4697,6 +4835,12 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 "          \"value\" : \"TEST\"\n" +
                 "        } ]\n" +
                 "      }\n" +
+                "    } ]\n" +
+                "  },\n" +
+                "  \"errormessages\" : {\n" +
+                "    \"errormessage\" : [ {\n" +
+                "      \"severity\" : \"Warning\",\n" +
+                "      \"text\" : \"MD5 hashed password authentication is deprecated and support will be removed at the end of 2025. Please switch to an alternative authentication method before then.\"\n" +
                 "    } ]\n" +
                 "  },\n" +
                 "  \"terms-and-conditions\" : {\n" +
@@ -5161,7 +5305,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request()
                 .put(Entity.entity(mapDirty(updatedObject), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        assertThat(whoisResources.getErrorMessages(), is(empty()));
+        assertThat(whoisResources.getErrorMessages(), hasSize(1));
+        assertThat(whoisResources.getErrorMessages().getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
         assertThat(whoisResources.getLink().getHref(), is(String.format("http://localhost:%s/test/person/PP1-TEST?unformatted", getPort())));
 
@@ -5202,8 +5348,10 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .put(Entity.entity(mapDirty(updatedObject), MediaType.APPLICATION_XML), WhoisResources.class);
 
         final List<ErrorMessage> messages = whoisResources.getErrorMessages();
-        assertThat(messages, hasSize(1));
-        assertThat(messages.get(0).getText(), is("Dry-run performed, no changes to the database have been made"));
+        assertThat(messages, hasSize(2));
+        assertThat(messages.getFirst().getText(), is("MD5 hashed password authentication is deprecated and support will be " +
+                "removed at the end of 2025. Please switch to an alternative authentication method before then."));
+        assertThat(messages.get(1).getText(), is("Dry-run performed, no changes to the database have been made"));
 
         final String storedObject = RestTest.target(getPort(), "whois/test/person/PP1-TEST").request().get(String.class);
         assertThat(storedObject, not(containsString("this_is_another_remark")));
@@ -5379,8 +5527,9 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .post(Entity.entity(map(createPerson), MediaType.APPLICATION_XML), WhoisResources.class);
 
         RestTest.assertInfoCount(createResponse, 1);
-        RestTest.assertErrorMessage(createResponse, 0, "Info", "Please use the \"remarks:\" attribute instead of end of line comment on primary key");
-        assertThat(createResponse.getErrorMessages().get(0).getAttribute(), is(new Attribute("nic-hdl", "PP1-TEST # create comment")));
+        RestTest.assertErrorMessage(createResponse, 1, "Info", "Please use the \"remarks:\" attribute instead of end " +
+                "of line comment on primary key");
+        assertThat(createResponse.getErrorMessages().get(1).getAttribute(), is(new Attribute("nic-hdl", "PP1-TEST # create comment")));
 
         final RpslObject updatePerson = RpslObject.parse("" +
                 "person:    Pauleth Palthen # comment\n" +
@@ -5398,10 +5547,10 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .put(Entity.entity(map(updatePerson), MediaType.APPLICATION_XML), WhoisResources.class);
 
         RestTest.assertInfoCount(updateResponse, 2);
-        RestTest.assertErrorMessage(updateResponse, 0, "Info", "Please use the \"remarks:\" attribute instead of end of line comment on primary key");
-        assertThat(updateResponse.getErrorMessages().get(0).getAttribute(), is(new Attribute("person", "Pauleth Palthen # comment")));
         RestTest.assertErrorMessage(updateResponse, 1, "Info", "Please use the \"remarks:\" attribute instead of end of line comment on primary key");
-        assertThat(updateResponse.getErrorMessages().get(1).getAttribute(), is(new Attribute("nic-hdl", "PP1-TEST # update comment")));
+        assertThat(updateResponse.getErrorMessages().get(1).getAttribute(), is(new Attribute("person", "Pauleth Palthen # comment")));
+        RestTest.assertErrorMessage(updateResponse, 2, "Info", "Please use the \"remarks:\" attribute instead of end of line comment on primary key");
+        assertThat(updateResponse.getErrorMessages().get(2).getAttribute(), is(new Attribute("nic-hdl", "PP1-TEST # update comment")));
     }
     @Test
     public void comment_separator_not_included_in_response() {
@@ -6007,8 +6156,8 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request(MediaType.APPLICATION_XML)
                 .put(Entity.entity(map(rpslObject), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        RestTest.assertWarningCount(response, 1);
-        RestTest.assertErrorMessage(response, 0, "Warning", "Not sending notification to %s because it is %s.",
+        RestTest.assertWarningCount(response, 2);
+        RestTest.assertErrorMessage(response, 1, "Warning", "Not sending notification to %s because it is %s.",
                 unsubscribedEmail, EmailStatusType.UNSUBSCRIBE.getValue());
     }
 
@@ -6035,8 +6184,8 @@ public class WhoisRestServiceTestIntegration extends AbstractIntegrationTest {
                 .request(MediaType.APPLICATION_XML)
                 .put(Entity.entity(map(rpslObject), MediaType.APPLICATION_XML), WhoisResources.class);
 
-        RestTest.assertWarningCount(response, 1);
-        RestTest.assertErrorMessage(response, 0, "Warning", "Not sending notification to %s because it is %s.",
+        RestTest.assertWarningCount(response, 2);
+        RestTest.assertErrorMessage(response, 1, "Warning", "Not sending notification to %s because it is %s.",
                 undeliverableEmail, EmailStatusType.UNDELIVERABLE.getValue());
     }
 
